--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Victoriia-Ripka.github.io/IceCream-team-project",
+  "homepage": "https://alexandra-makarenko.github.io/ice-cream-team-project/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /IceCream-team-project/"
