--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://alexandra-makarenko.github.io/ice-cream-team-project/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /IceCream-team-project/"
+    "build": "parcel build src/*.html --public-url /ice-cream-team-project/"
   },
   "repository": {
     "type": "git",
